--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -5,21 +5,21 @@
    "metadata": {},
    "source": [
     "# Heart Attack Study\n",
-    "By Kai C, Nathaniel G, Josiah L, Joseph T\n",
-    "\n",
-    "Data Set: https://www.kaggle.com/datasets/ankushpanday2/heart-attack-prediction-in-united-states"
+    "By Kai C, Nathaniel G, Josiah L, Joseph T"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will read the csv file and convert it into a dataframe"
+    "Since the dataset file is too large, we will download the csv file (https://www.kaggle.com/datasets/ankushpanday2/heart-attack-prediction-in-united-states) and keep it in the downloads folder.\n",
+    "\n",
+    "We will then import pandas and read the csv file and convert it into a dataframe."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
        "[372974 rows x 32 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,9 +413,33 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "heart_attack_df = pd.read_csv('~/Desktop/heart_attack_dataset.csv')\n",
+    "heart_attack_df = pd.read_csv('~/Downloads/heart_attack_dataset.csv')\n",
     "\n",
     "heart_attack_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion 1\n",
+    "By TBD"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion 2\n",
+    "By TBD"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion 3\n",
+    "By TBD"
    ]
   }
  ],
