--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -12,6 +12,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Data Preprocessing\n",
+    "\n",
     "Since the dataset file is too large, we will download the csv file (https://www.kaggle.com/datasets/ankushpanday2/heart-attack-prediction-in-united-states) and keep it in the downloads folder.\n",
     "\n",
     "We will then import pandas and read the csv file and convert it into a dataframe."
@@ -470,7 +472,7 @@
     "## Conclusion 4 (extra)\n",
     "By Kai\n",
     "\n",
-    "I will conclude based on three categorical variables, thus, I will be using tests like Chi-Squared tests."
+    "I will conclude based on three categorical variables, thus, I will be using tests ANOVA tests."
    ]
   },
   {
