--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -326,7 +326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I will be doing a chi sqare test comparing ethnicity to outcome. my null hypothesis is that ethnicity does not affect outcome and my alternaive hypothesis is that ethnicity does affect outcome. I will reject with aplha of 0.05.\n",
+    "I will be doing a chi sqare test comparing ethnicity to outcome. my null hypothesis is that ethnicity does not affect outcome and my alternative hypothesis is that ethnicity does affect outcome. I will reject with aplha of 0.05.\n",
     "\n",
     "But first, i will make a contingency table"
    ]
