--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -693,6 +693,113 @@
    "source": [
     "Since the p-value = 0.14 > (alpha = 0.05), we fail to reject the null hypothesis."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion 4 (extra)\n",
+    "By Nathaniel\n",
+    "\n",
+    "Conducting a hypothesis test to determine whether or not level of cholesterol has an effect on the outcome of a heart attack. \n",
+    "\n",
+    "For the purposes of this test,  I will assume the population standard deviation is unknown. Therefore I will use a two-sample T-test with level of significance $\\alpha=0.05$.\n",
+    "\n",
+    "- H0: Above-average cholesterol does not have an effect on the outcome of whether a heart attack occured\n",
+    "- HA: Above-average cholesterol does have an effect on the outcome of whether a heart attack occured.\n",
+    "\n",
+    "To conduct this test, the data is split into two samples based on whether or not cholesterol is above the mean of the sample:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#convert object type data to numeric for stats.ttest_ind()\n",
+    "heart_attack_df['outcome_numeric'] = heart_attack_df['Outcome'].map({'No Heart Attack': 0, 'Heart Attack': 1})\n",
+    "\n",
+    "mean = heart_attack_df['Cholesterol'].mean()\n",
+    "\n",
+    "low_col_df = heart_attack_df[heart_attack_df['Cholesterol'] < mean]['outcome_numeric']\n",
+    "high_col_df = heart_attack_df[heart_attack_df['Cholesterol'] >= mean]['outcome_numeric']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_stat, p_value = scipy.stats.ttest_ind(low_col_df, high_col_df, equal_var=False) \n",
+    "p_value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The p-value (0.131) >= 0.05, indicates no significant difference between the groups. We fail to reject the null hypothesis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(6, 4))\n",
+    "plt.xlabel(\"Outcome\")\n",
+    "plt.ylabel(\"Cholesterol Level\")\n",
+    "plt.title(\"Box Plot of Cholesterol by Group\")\n",
+    "sns.boxplot(x=\"Outcome\", y=\"Cholesterol\", data=heart_attack_df, palette=\"Set2\")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(There appears to be little difference in the summary statistics for these two groups, thus resulting in the similar boxplots)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(heart_attack_df.groupby(\"Outcome\")[\"Cholesterol\"].describe())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below is a Bar plot that compares the number of those who had heart attacks with those that did not for individuals with above average Cholesterol."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "above_mean_df = heart_attack_df[heart_attack_df['Cholesterol'] > mean]\n",
+    "\n",
+    "group_counts = above_mean_df['Outcome'].value_counts()\n",
+    "\n",
+    "sns.barplot(x=group_counts.index, y=group_counts.values, palette=\"Set2\")\n",
+    "\n",
+    "plt.xlabel(\"Heart Attack Outcome\")\n",
+    "plt.ylabel(\"Count Above Mean\")\n",
+    "plt.title(\"Number of Heart Attack vs. No Heart Attack Above Avg Cholesterol\")\n",
+    "\n",
+    "plt.show()\n",
+    "group_counts"
+   ]
   }
  ],
  "metadata": {
