not done yet, just need to head to a quick 30-min meeting

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -92,228 +92,59 @@
    "source": [
     "### Parsing:\n",
     "\n",
-    "Reassigned the value 1 to True and value 0 to False for the Smoker, Diabetes, Hypertension, FamilyHistory, PreviousHeartAttack, and StrokeHistory columns."
+    "We are using one-hot encoding to change all values into integers.\n",
+    "\n",
+    "We reassigned the value 1 to True and value 0 to False for the Smoker, Diabetes, Hypertension, FamilyHistory, PreviousHeartAttack, and StrokeHistory columns.\n",
+    "\n",
+    "We then used reassigned value 1 to Yes and value 0 to False for \n",
+    "\n",
+    "Lastly, we used one-hot encoding to changed all string values of features to host 2 or more features for each unique string value to be a binary value of 0 or 1."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Cholesterol</th>\n",
-       "      <th>BloodPressure</th>\n",
-       "      <th>HeartRate</th>\n",
-       "      <th>BMI</th>\n",
-       "      <th>Smoker</th>\n",
-       "      <th>Diabetes</th>\n",
-       "      <th>Hypertension</th>\n",
-       "      <th>FamilyHistory</th>\n",
-       "      <th>...</th>\n",
-       "      <th>ExerciseInducedAngina</th>\n",
-       "      <th>Slope</th>\n",
-       "      <th>NumberOfMajorVessels</th>\n",
-       "      <th>Thalassemia</th>\n",
-       "      <th>PreviousHeartAttack</th>\n",
-       "      <th>StrokeHistory</th>\n",
-       "      <th>Residence</th>\n",
-       "      <th>EmploymentStatus</th>\n",
-       "      <th>MaritalStatus</th>\n",
-       "      <th>Outcome</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>31</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>194</td>\n",
-       "      <td>162</td>\n",
-       "      <td>71</td>\n",
-       "      <td>22.9</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Downsloping</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Suburban</td>\n",
-       "      <td>Retired</td>\n",
-       "      <td>Single</td>\n",
-       "      <td>No Heart Attack</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>69</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>208</td>\n",
-       "      <td>148</td>\n",
-       "      <td>93</td>\n",
-       "      <td>33.9</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Upsloping</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Suburban</td>\n",
-       "      <td>Unemployed</td>\n",
-       "      <td>Married</td>\n",
-       "      <td>No Heart Attack</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>34</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>132</td>\n",
-       "      <td>161</td>\n",
-       "      <td>94</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Upsloping</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>Retired</td>\n",
-       "      <td>Single</td>\n",
-       "      <td>Heart Attack</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>53</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>268</td>\n",
-       "      <td>134</td>\n",
-       "      <td>91</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Flat</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Reversible defect</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Suburban</td>\n",
-       "      <td>Retired</td>\n",
-       "      <td>Widowed</td>\n",
-       "      <td>No Heart Attack</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>57</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>203</td>\n",
-       "      <td>140</td>\n",
-       "      <td>75</td>\n",
-       "      <td>30.1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>...</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Flat</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Fixed defect</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>Rural</td>\n",
-       "      <td>Retired</td>\n",
-       "      <td>Married</td>\n",
-       "      <td>Heart Attack</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 32 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Age  Gender  Cholesterol  BloodPressure  HeartRate   BMI  Smoker  Diabetes  \\\n",
-       "0   31    Male          194            162         71  22.9   False      True   \n",
-       "1   69    Male          208            148         93  33.9    True      True   \n",
-       "2   34  Female          132            161         94  34.0   False     False   \n",
-       "3   53    Male          268            134         91  35.0   False      True   \n",
-       "4   57  Female          203            140         75  30.1   False      True   \n",
-       "\n",
-       "   Hypertension  FamilyHistory  ...  ExerciseInducedAngina        Slope  \\\n",
-       "0         False          False  ...                    Yes  Downsloping   \n",
-       "1         False          False  ...                    Yes    Upsloping   \n",
-       "2          True           True  ...                    Yes    Upsloping   \n",
-       "3          True          False  ...                    Yes         Flat   \n",
-       "4         False          False  ...                    Yes         Flat   \n",
-       "\n",
-       "  NumberOfMajorVessels        Thalassemia PreviousHeartAttack  StrokeHistory  \\\n",
-       "0                    1             Normal               False          False   \n",
-       "1                    2             Normal               False          False   \n",
-       "2                    0             Normal                True          False   \n",
-       "3                    0  Reversible defect                True          False   \n",
-       "4                    0       Fixed defect                True          False   \n",
-       "\n",
-       "  Residence EmploymentStatus MaritalStatus          Outcome  \n",
-       "0  Suburban          Retired        Single  No Heart Attack  \n",
-       "1  Suburban       Unemployed       Married  No Heart Attack  \n",
-       "2     Rural          Retired        Single     Heart Attack  \n",
-       "3  Suburban          Retired       Widowed  No Heart Attack  \n",
-       "4     Rural          Retired       Married     Heart Attack  \n",
-       "\n",
-       "[5 rows x 32 columns]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "cannot insert No, already exists",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/_0/zzh68_395tq16__v86nnycch0000gn/T/ipykernel_11454/2577276894.py\u001b[0m in \u001b[0;36m?\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0;31m# the new columns from the one-hot encoding\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0mdummies\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_dummies\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mheart_attack_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfeature\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mnew_col\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdummies\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m             \u001b[0mheart_attack_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnew_col\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdummies\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnew_col\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m             \u001b[0mcount\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0;31m# remove the old feature\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, loc, column, value, allow_duplicates)\u001b[0m\n\u001b[1;32m   5154\u001b[0m                 \u001b[0;34m\"'self.flags.allows_duplicate_labels' is False.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5155\u001b[0m             \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5156\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mallow_duplicates\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mcolumn\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5157\u001b[0m             \u001b[0;31m# Should this be a different kind of error??\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5158\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"\u001b[0m\u001b[0;34mcannot insert \u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mcolumn\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m, already exists\u001b[0m\u001b[0;34m\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5159\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5160\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"loc must be int\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5161\u001b[0m         \u001b[0;31m# convert non stdlib ints to satisfy typing checks\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: cannot insert No, already exists"
+     ]
     }
    ],
    "source": [
+    "# features with bool True/False values\n",
     "heart_attack_df['Smoker'] = heart_attack_df['Smoker'].apply(lambda value : True if value == 1 else False)\n",
     "heart_attack_df['Diabetes'] = heart_attack_df['Diabetes'].apply(lambda value : True if value == 1 else False)\n",
     "heart_attack_df['Hypertension'] = heart_attack_df['Hypertension'].apply(lambda value : True if value == 1 else False)\n",
     "heart_attack_df['FamilyHistory'] = heart_attack_df['FamilyHistory'].apply(lambda value : True if value == 1 else False)\n",
     "heart_attack_df['PreviousHeartAttack'] = heart_attack_df['PreviousHeartAttack'].apply(lambda value : True if value == 1 else False)\n",
     "heart_attack_df['StrokeHistory'] = heart_attack_df['StrokeHistory'].apply(lambda value : True if value == 1 else False)\n",
+    "\n",
+    "# features with str yes/no values\n",
+    "heart_attack_df['Medication'] = heart_attack_df['Medication'].apply(lambda value : True if value == 1 else False)\n",
+    "\n",
+    "# one-hot encoding\n",
+    "for feature in heart_attack_df.columns:\n",
+    "    if all(isinstance(row, str) for row in heart_attack_df[feature]): # should only do one-hot encoding if column has string values\n",
+    "        index = heart_attack_df.columns.get_loc(feature)\n",
+    "        count = 0\n",
+    "\n",
+    "        # the new columns from the one-hot encoding\n",
+    "        dummies = pd.get_dummies(heart_attack_df[feature], dtype=int)\n",
+    "        for new_col in dummies:\n",
+    "            heart_attack_df.insert(index+count, column=new_col, value=dummies[new_col].values)\n",
+    "            count+=1\n",
+    "        \n",
+    "        # remove the old feature\n",
+    "        heart_attack_df.drop(feature, axis=1, inplace=True)\n",
     "\n",
     "heart_attack_df.head()"
    ]
@@ -954,7 +785,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
