--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -92,44 +92,46 @@
    "source": [
     "### Parsing:\n",
     "\n",
-    "We are using one-hot encoding to change all values into integers.\n",
-    "\n",
-    "We reassigned the value 1 to True and value 0 to False for the Smoker, Diabetes, Hypertension, FamilyHistory, PreviousHeartAttack, and StrokeHistory columns.\n",
-    "\n",
-    "We then used reassigned value 1 to Yes and value 0 to False for \n",
-    "\n",
-    "Lastly, we used one-hot encoding to changed all string values of features to host 2 or more features for each unique string value to be a binary value of 0 or 1."
+    "We used one-hot encoding to changed all categorical features into binary values of 0 and 1."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "cannot insert No, already exists",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/_0/zzh68_395tq16__v86nnycch0000gn/T/ipykernel_11454/2577276894.py\u001b[0m in \u001b[0;36m?\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0;31m# the new columns from the one-hot encoding\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0mdummies\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_dummies\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mheart_attack_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfeature\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mnew_col\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdummies\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m             \u001b[0mheart_attack_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnew_col\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdummies\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnew_col\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m             \u001b[0mcount\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0;31m# remove the old feature\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.13/lib/python3.13/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, loc, column, value, allow_duplicates)\u001b[0m\n\u001b[1;32m   5154\u001b[0m                 \u001b[0;34m\"'self.flags.allows_duplicate_labels' is False.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5155\u001b[0m             \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5156\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mallow_duplicates\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mcolumn\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5157\u001b[0m             \u001b[0;31m# Should this be a different kind of error??\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5158\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"\u001b[0m\u001b[0;34mcannot insert \u001b[0m\u001b[0;34m{\u001b[0m\u001b[0mcolumn\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m, already exists\u001b[0m\u001b[0;34m\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5159\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5160\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"loc must be int\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5161\u001b[0m         \u001b[0;31m# convert non stdlib ints to satisfy typing checks\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: cannot insert No, already exists"
-     ]
+     "data": {
+      "text/plain": [
+       "Index(['Age', 'Female', 'Male', 'Cholesterol', 'BloodPressure', 'HeartRate',\n",
+       "       'BMI', 'Smoker', 'Diabetes', 'Hypertension', 'FamilyHistory',\n",
+       "       'PhysicalActivity', 'AlcoholConsumption', 'Healthy', 'Moderate',\n",
+       "       'Unhealthy', 'StressLevel', 'Asian', 'Black', 'Hispanic', 'Other',\n",
+       "       'White', 'Income', 'College', 'High School', 'Postgraduate',\n",
+       "       'Medication', 'Asymptomatic', 'Atypical', 'Non-anginal', 'Typical',\n",
+       "       'LV hypertrophy', 'Normal', 'ST-T abnormality', 'MaxHeartRate',\n",
+       "       'ST_Depression', 'ExerciseInducedAngina', 'Downsloping', 'Flat',\n",
+       "       'Upsloping', 'NumberOfMajorVessels', 'Fixed defect',\n",
+       "       'Thalassemia_Fixed defect', 'Thalassemia_Normal', 'Reversible defect',\n",
+       "       'PreviousHeartAttack', 'StrokeHistory', 'Rural', 'Suburban', 'Urban',\n",
+       "       'Employed', 'Retired', 'Unemployed', 'Divorced', 'Married', 'Single',\n",
+       "       'Widowed', 'Heart Attack', 'No Heart Attack'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# features with bool True/False values\n",
-    "heart_attack_df['Smoker'] = heart_attack_df['Smoker'].apply(lambda value : True if value == 1 else False)\n",
-    "heart_attack_df['Diabetes'] = heart_attack_df['Diabetes'].apply(lambda value : True if value == 1 else False)\n",
-    "heart_attack_df['Hypertension'] = heart_attack_df['Hypertension'].apply(lambda value : True if value == 1 else False)\n",
-    "heart_attack_df['FamilyHistory'] = heart_attack_df['FamilyHistory'].apply(lambda value : True if value == 1 else False)\n",
-    "heart_attack_df['PreviousHeartAttack'] = heart_attack_df['PreviousHeartAttack'].apply(lambda value : True if value == 1 else False)\n",
-    "heart_attack_df['StrokeHistory'] = heart_attack_df['StrokeHistory'].apply(lambda value : True if value == 1 else False)\n",
-    "\n",
-    "# features with str yes/no values\n",
-    "heart_attack_df['Medication'] = heart_attack_df['Medication'].apply(lambda value : True if value == 1 else False)\n",
+    "# heart_attack_df['Smoker'] = heart_attack_df['Smoker'].apply(lambda value : True if value == 1 else False)\n",
+    "# heart_attack_df['Diabetes'] = heart_attack_df['Diabetes'].apply(lambda value : True if value == 1 else False)\n",
+    "# heart_attack_df['Hypertension'] = heart_attack_df['Hypertension'].apply(lambda value : True if value == 1 else False)\n",
+    "# heart_attack_df['FamilyHistory'] = heart_attack_df['FamilyHistory'].apply(lambda value : True if value == 1 else False)\n",
+    "# heart_attack_df['PreviousHeartAttack'] = heart_attack_df['PreviousHeartAttack'].apply(lambda value : True if value == 1 else False)\n",
+    "# heart_attack_df['StrokeHistory'] = heart_attack_df['StrokeHistory'].apply(lambda value : True if value == 1 else False)\n",
     "\n",
     "# one-hot encoding\n",
     "for feature in heart_attack_df.columns:\n",
@@ -137,16 +139,28 @@
     "        index = heart_attack_df.columns.get_loc(feature)\n",
     "        count = 0\n",
     "\n",
-    "        # the new columns from the one-hot encoding\n",
-    "        dummies = pd.get_dummies(heart_attack_df[feature], dtype=int)\n",
-    "        for new_col in dummies:\n",
-    "            heart_attack_df.insert(index+count, column=new_col, value=dummies[new_col].values)\n",
-    "            count+=1\n",
-    "        \n",
-    "        # remove the old feature\n",
-    "        heart_attack_df.drop(feature, axis=1, inplace=True)\n",
+    "        # handles edge case of features containing str yes/no values\n",
+    "        if heart_attack_df[feature].iloc[0].casefold() == 'yes' or heart_attack_df[feature].iloc[0].casefold() == 'no':\n",
+    "            heart_attack_df[feature] = heart_attack_df[feature].apply(lambda value : 1 if value.casefold() == 'yes' else 0)\n",
     "\n",
-    "heart_attack_df.head()"
+    "        # creates new columns from the one-hot encoding\n",
+    "        else:\n",
+    "            dummies = pd.get_dummies(heart_attack_df[feature], dtype=int)\n",
+    "            for new_col in dummies.unique():\n",
+    "                # edge case new_columns\n",
+    "                if new_col.casefold() == 'normal' or new_col.casefold().trim() == 'fixed defect':\n",
+    "                    heart_attack_df.insert(index+count, column=feature+'_'+new_col, value=dummies[new_col].values)\n",
+    "\n",
+    "                # all other new_columns\n",
+    "                else:\n",
+    "                    heart_attack_df.insert(index+count, column=new_col, value=dummies[new_col].values)\n",
+    "                count+=1\n",
+    "            \n",
+    "            # remove the old feature\n",
+    "            heart_attack_df.drop(feature, axis=1, inplace=True)\n",
+    "\n",
+    "heart_attack_df.head()\n",
+    "heart_attack_df.columns"
    ]
   },
   {
