Finish dataprocessing fr this time

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -105,21 +105,23 @@
       "text/plain": [
        "Index(['Age', 'Female', 'Male', 'Cholesterol', 'BloodPressure', 'HeartRate',\n",
        "       'BMI', 'Smoker', 'Diabetes', 'Hypertension', 'FamilyHistory',\n",
-       "       'PhysicalActivity', 'AlcoholConsumption', 'Healthy', 'Moderate',\n",
-       "       'Unhealthy', 'StressLevel', 'Asian', 'Black', 'Hispanic', 'Other',\n",
-       "       'White', 'Income', 'College', 'High School', 'Postgraduate',\n",
-       "       'Medication', 'Asymptomatic', 'Atypical', 'Non-anginal', 'Typical',\n",
-       "       'LV hypertrophy', 'Normal', 'ST-T abnormality', 'MaxHeartRate',\n",
+       "       'PhysicalActivity', 'AlcoholConsumption', 'Diet_Healthy',\n",
+       "       'Diet_Moderate', 'Diet_Unhealthy', 'StressLevel', 'Asian', 'Black',\n",
+       "       'Hispanic', 'Other', 'White', 'Income', 'College', 'High School',\n",
+       "       'Postgraduate', 'Medication', 'ChestPainType_Asymptomatic',\n",
+       "       'ChestPainType_Atypical', 'ChestPainType_Non-anginal',\n",
+       "       'ChestPainType_Typical', 'ECGResults_LV hypertrophy',\n",
+       "       'ECGResults_Normal', 'ECGResults_ST-T abnormality', 'MaxHeartRate',\n",
        "       'ST_Depression', 'ExerciseInducedAngina', 'Downsloping', 'Flat',\n",
-       "       'Upsloping', 'NumberOfMajorVessels', 'Fixed defect',\n",
-       "       'Thalassemia_Fixed defect', 'Thalassemia_Normal', 'Reversible defect',\n",
+       "       'Upsloping', 'NumberOfMajorVessels', 'Thalassemia_Fixed defect',\n",
+       "       'Thalassemia_Normal', 'Thalassemia_Reversible defect',\n",
        "       'PreviousHeartAttack', 'StrokeHistory', 'Rural', 'Suburban', 'Urban',\n",
        "       'Employed', 'Retired', 'Unemployed', 'Divorced', 'Married', 'Single',\n",
        "       'Widowed', 'Heart Attack', 'No Heart Attack'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,12 +148,12 @@
     "        # creates new columns from the one-hot encoding\n",
     "        else:\n",
     "            dummies = pd.get_dummies(heart_attack_df[feature], dtype=int)\n",
-    "            for new_col in dummies.unique():\n",
-    "                # edge case new_columns\n",
-    "                if new_col.casefold() == 'normal' or new_col.casefold().trim() == 'fixed defect':\n",
+    "            for new_col in dummies:\n",
+    "                # edge case features\n",
+    "                if feature.casefold() == 'diet' or feature.casefold() == 'chestpaintype' or feature.casefold() == 'ecgresults' or feature.casefold() == 'thalassemia' or feature.casefold() == 'thalassemia':\n",
     "                    heart_attack_df.insert(index+count, column=feature+'_'+new_col, value=dummies[new_col].values)\n",
     "\n",
-    "                # all other new_columns\n",
+    "                # all other feaetures\n",
     "                else:\n",
     "                    heart_attack_df.insert(index+count, column=new_col, value=dummies[new_col].values)\n",
     "                count+=1\n",
