clean up markup text a bit

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2449,12 +2449,12 @@
     "### ML Algorithm Design/Development\n",
     "\n",
     "#### KNN Classifier\n",
-    "We are going to train a KNN classifier model in order to predict whether someone with a lot of unhealthy features (at least 5 unhealthy features) will get a heart attack or not."
+    "We are going to train a KNN classifier model in order to predict whether someone with Kai C.'s features will get a heart attack or not."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2568,7 +2568,7 @@
    "source": [
     "#### PCA (Primary Component Analysis)\n",
     "\n",
-    "Principal Component Analysis (PCA) is a dimensionality reduction technique that finds directions (principal components), maximizes variance in a dataset, reduces the number of features, we are improves the performance of an algorithm. But first!\n",
+    "Principal Component Analysis (PCA) is a dimensionality reduction technique that finds directions (principal components), maximizes variance in a dataset, reduces the number of features, and improves the performance of an algorithm. But first!\n",
     "\n",
     "#### Elbow Method\n",
     "We need to use the elbow method to help found out the number of clusters needed to apply PCA."
@@ -2703,7 +2703,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Joseph doing shit"
+    "### Joseph doing stuff"
    ]
   },
   {
