--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "Nathaniel:\n",
     "\n",
-    "Joseph:"
+    "Joseph: Fixed up a lot of the PCA and K means, did random forrest, debugged code"
    ]
   },
   {
@@ -1678,6 +1678,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PCA is used here with conjunction with K means later on to both decrease the number of variables (because 50+ variables is quite a lot) as well as create some new variables off of the K means clustering. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 135,
    "metadata": {},
@@ -1722,7 +1729,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This shows that there isnt any good single thing that explains varaince well. At least better than nothing i choose to use the first 30 components as that gives me around 80% of the variance. I may choose a different value in the future depening on how things go."
+    "This shows that there isnt any good single thing that explains varaince well. The first 13 or so components seem to explain relatively large amounts of variance before tapering off. I choose to use the first 30 components as that gives me around 80% of the variance. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, I start the K means. In order to find the best # of clusters, I use the elbow method to plot out the intertias and distortions of varying # of clusters."
    ]
   },
   {
@@ -1857,7 +1871,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Interesting that there is a bit of each K mean on each side. (Maybe expand here)"
+    "There seems to be a relatively clean split off of the 2nd Principal Component. "
    ]
   },
   {
@@ -4295,27 +4309,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below we are one hot encoding the cluster before adding it to the dataset. One hot encoding is not as neccesary now because there are only 2 clusters but previously we had more clusters and such code was necessary to not have the model analyze the cluster number as ordinal data. (one hot encoding adds an extra feature now which prolly makes things harder to learn for the model but we'll ignore that because of sunk cost fallacy :relieved: (also is fancier))"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# cluster_labels_tr = KMeans(n_clusters=2, random_state=seed).fit_predict(X_pca)\n",
-    "# cluster_labels_te = KMeans(n_clusters=2, random_state=seed).fit_predict(X_pca)\n",
-    "\n",
-    "# X_scaled_tr = StandardScaler().fit_transform(X_train)\n",
-    "# X_scaled_te = StandardScaler().fit_transform(X_test)\n",
-    "\n",
-    "\n",
-    "\n",
-    "# pca = PCA(n_components=30)\n",
-    "\n",
-    "# pca = PCA(n_components=36)\n",
-    "\n",
-    "\n",
-    "# X_pca_tr = pca.fit_transform(X_train)         no need is literally X_pca\n",
-    "\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "# applying one hot to the k means cluster.\n",
     "\n",
@@ -4348,7 +4353,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now be using a RandomForestClassifier as another machine learning technique to try to predict heart attack outcomes."
+    "We will now be using a RandomForestClassifier as another machine learning technique to try to predict heart attack outcomes. The additional feature added by k means clustering is also included."
    ]
   },
   {
@@ -4425,7 +4430,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The accuracy, precision, recall, f1-score all have really low values which shows that the Random Forest Classifier is not good in predicting if someone has a heart attack or not."
+    "The accuracy, precision, recall, f1-score all have really low values which shows that the Random Forest Classifier is not good in predicting if someone has a heart attack or not. Around the same accuracy as the Knn from before. Perhaps it is very hard to predict."
    ]
   },
   {
