--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -4442,7 +4442,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualization\n",
+    "## Visualization (Random Forest)\n",
     "\n",
     "We will now be plotting a confusion matrix as a heatmap to show the instances of each of the predictions of whether someone has a heart attack or not compared to the actual scenario when someone either has a heart attack or not."
    ]
