added mroe comments

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "Nathaniel: Wrote a hypothesis test for section C.\n",
     "\n",
-    "Joseph: Fixed up a lot of the PCA and K means, did random forrest, debugged code"
+    "Joseph: Contributed to doing most of the PCA & K means & random forest. plotted out total cumulative variance graph and visualized PCA clustering. Trained random forrest ml model. Debugged code, making sure that there were no mathematical errors within code. Contributed to comments about work done as well as conclustion. Additionally did the chi square data exploration."
    ]
   },
   {
@@ -1884,7 +1884,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There seems to be a relatively clean split off of the 1st Principal Component. "
+    "There seems to be a relatively clean split off of the first two components. Not particularly good as this means that the k means are not mostly clustering on only these two PCs and not learning much of the overall shape of the data. "
    ]
   },
   {
@@ -4318,7 +4318,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below we are one hot encoding the cluster before adding it to the dataset. One hot encoding is not as neccesary now because there are only 2 clusters but previously we had more clusters and such code was necessary to not have the model analyze the cluster number as ordinal data. (one hot encoding adds an extra feature now which might makes things harder to learn for the model but is also fancier)"
+    "Below we are one hot encoding the cluster before adding it to the dataset. One hot encoding is not as neccesary now because there are only 2 clusters but previously we had more clusters and such code was necessary to not have the model analyze the cluster number as ordinal data. (one hot encoding adds an extra feature now which might makes things harder to learn for the model but is also fancier)\n",
+    "\n",
+    "Though the k means doesnt seem to have learned much that was already known, we are still including it anyways just in case."
    ]
   },
   {
@@ -4487,9 +4489,9 @@
    "source": [
     "## Insights and Conclusions\n",
     "\n",
-    "After our team's analysis, we have found that it is very difficult to predict whether someone has a heart attack or not from a wide range of features such as health features like blood pressure and heart rate and also other types of features such as specific demographics of a person and lifestyle choices of a person. Even with features such as blood pressure and heart rate which can be thought of as potential indicators for a heart attack, our team still found it difficult in order to predict a heart attack or not. This project can show the reality of the really difficult task of predicting whether someone has a heart attack or not.\n",
+    "After our team's analysis, we have found that it is very difficult to predict whether someone has a heart attack or not from a wide range of features such as health features like blood pressure and heart rate and also other types of features such as specific demographics of a person and lifestyle choices of a person. Even with features such as blood pressure and heart rate which can be thought of as potential indicators for a heart attack, our team still found it difficult to predict heart attacks. Neither KNN or random forest were able to have meaningful accuracy, and PCA analysis + clustering also did not seemt to be able to pick up on any interesting features from the dataset. This project can show the reality of the really difficult task of predicting whether someone has a heart attack or not. Perhaps there could have been higher accuracy with more complex ml models such as transformers and more data analysis with other dimensionality reduction techniques such as UMAP as well as more data, but those techniques are outside of the scope for this class and our dataset is only so big. \n",
     "\n",
-    "There could also be the case where our team used way too many features in different categories of the type of features like using health and demographics features combined. This could have led to not the most accurate results for determining if a person has a heart attack or not. Possibly reframing the question that our team was trying to solve to be more specfic for specfic features of the dataset could have produced more accurate final results."
+    "There could also be the case where our team used way too many features in different categories of the type of features like using health and demographics features combined. This could have led to not the most accurate results for determining if a person has a heart attack or not. Possibly reframing the question that our team was trying to solve to be more specfic for specfic features of the dataset could have produced more accurate final results, though it would be relatiely unlikely with how the PCA results showed that there were no standout variables that contributed to particuarly large amounts of the total variance of the dataset, showing that the true complexity of predicting heart attacks. "
    ]
   },
   {
